--- a/pages/pomodoro.css
+++ b/pages/pomodoro.css
@@ -29,7 +29,14 @@ header{
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 30px 10%;
+    padding: 0px 10%;
+}
+
+img.logo{
+  cursor: pointer;
+  margin-right: auto;
+  max-width:10%;
+  height:auto;
 }
 
 .logo{
