--- a/pages/calc.css
+++ b/pages/calc.css
@@ -8,7 +8,7 @@
 }
 
 
-li,a,button{
+li,a,h1,button{
     font-family:"Montserrat",sans-serif;
     font-weight: 500;
     font-size:16px ;
@@ -108,38 +108,69 @@ button:hover{
 
 
 
-
-/*--HOME--*/
-
-.Quote{
-    color: #edf0f1;
-    display: flex;
-    justify-content: center;
-    padding: 60px ;
+.container {
+    text-align: center;
+    margin-top: 23px;
+  }
+  table {
+    margin: auto;
+  }
+  
+  input {
+    border: 5px solid #24252A;
+    border-radius: 9px;
     font-size: 1.5rem;
-}
+    width: auto;
+    col
+  }
+  /*button {
+    border-radius: 3px;
+    font-size: 26px;
+    background: gray;
+    width: 102px;
+    border-radius: 10px;
+    height: 45px;
+  }*/
 
-.home{
+  tbody{
+      width:102px ;
+  }
+  
+  .calculator {
+    border-radius: 8px;
+    background-color: #edf0f1;
+    padding: 23px 23px 23px 23px;
+    display: inline-block;
+    height: 20rem;
+  }
+
+ button.calc{
+     width: 5rem;
+     height: auto;
+
+ }
+  
+  h1 {
+    font-size: 53px;
+    padding-bottom: 2rem;
+  }
+
+  input#screen{
+    background-color: #edf0f1;
     
-    justify-content: space-around;
-    align-items: center;
-}
+  }
 
-.imghome{
-    display: flex;
-    justify-content: center;
-    margin-right: 40px;
+  input{
+      padding-bottom: 23px;
+      margin-bottom: 2rem;
+  }
+
+  
+table{
+    background-color: #edf0f1;
     
 }
-
-.study{
-    max-width:40%;
-    height:auto;
-    border-radius: 20px;
-    box-shadow: #edf0f1 20px 20px 20px;
-    
-    
+td{
+    background-color: #edf0f1;
 }
-
-
-
+  
