--- a/pages/flashcard.css
+++ b/pages/flashcard.css
@@ -62,20 +62,51 @@ button{
     transition: all 0.3s ease 0s;
 }
 
-/*body{
-  font-family: 'Nunito', sans-serif;
-  font-size: 1rem;
-  background: whitesmoke;
-}
+.dropdown-button { 
+  background-color: #24252A; 
+  color: white; 
+  padding: 16px; 
+  font-size: 16px; 
+  border: none; 
+} 
+.dropdown { 
+  position: relative; 
+  display: inline-block;
+  font-family:"Montserrat",sans-serif;
+  font-weight: 500;
+  font-size:16px ;
+  color: #edf0f1; 
+} 
 
-button{
-  padding: 8px;
-  outline: none;
-  cursor: pointer;
-  border: 1px solid lightgray;
-  border-radius: 5px;
-  background: whitesmoke;
-}*/
+.dropdown-list { 
+  display: none; 
+  position: absolute; 
+  background-color: #0e0d0d; 
+  min-width: 160px; 
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
+  z-index: 1; 
+} 
+
+.dropdown-list a { 
+  color: #edf0f1; 
+  padding: 12px 16px; 
+  text-decoration: none; 
+  display: block; 
+  font-family: verdana; 
+} 
+
+.dropdown-list a:hover { 
+  background-color: #ddd; 
+} 
+
+.dropdown:hover .dropdown-list { 
+  display: block; 
+} 
+
+.dropdown:hover .dropdown-button { 
+  background-color: #24252A; 
+} 
+
 
 button:hover{
     background-color: rgba(0,136,169,0.8);
