--- a/pages/pomodoro.css
+++ b/pages/pomodoro.css
@@ -74,6 +74,51 @@ button:hover{
     background-color: rgba(0,136,169,0.5);
 }
 
+.dropdown-button { 
+  background-color: #24252A; 
+  color: white; 
+  padding: 16px; 
+  font-size: 16px; 
+  border: none; 
+} 
+.dropdown { 
+  position: relative; 
+  display: inline-block;
+  font-family:"Montserrat",sans-serif;
+  font-weight: 500;
+  font-size:16px ;
+  color: #edf0f1; 
+} 
+
+.dropdown-list { 
+  display: none; 
+  position: absolute; 
+  background-color: #0e0d0d; 
+  min-width: 160px; 
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
+  z-index: 1; 
+} 
+
+.dropdown-list a { 
+  color: #edf0f1; 
+  padding: 12px 16px; 
+  text-decoration: none; 
+  display: block; 
+  font-family: verdana; 
+} 
+
+.dropdown-list a:hover { 
+  background-color: #ddd; 
+} 
+
+.dropdown:hover .dropdown-list { 
+  display: block; 
+} 
+
+.dropdown:hover .dropdown-button { 
+  background-color: #24252A; 
+} 
+
 /*-----pomodoro-----*/
 
 h1 {
