--- a/pages/SpeechText.css
+++ b/pages/SpeechText.css
@@ -62,12 +62,13 @@ img.logo{
     font-weight: 500;
     font-size:16px ;
     color: #edf0f1; 
+    padding-bottom:1rem ;
   } 
   
   .dropdown-list { 
     display: none; 
     position: absolute; 
-    background-color: #f1f1f1; 
+    background-color: #24252A; 
     min-width: 160px; 
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
     z-index: 1; 
